# codebase-c

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.make  README.md  build.bat  compile_commands.json
base/: macros.h  types.h
base/allocator/: arena.h  common.h
docs/: Makefile.md  build.bat.md
src/: include.h  main.c
test/: test_all.c  test_macros.c
